SERVER-51659 ShardingCatalogManager::abortTxnForConfigDocument should not throw if abortTransaction fails with NoSuchTransaction